--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,11 @@
 
   <meta name="date" scheme="ISO8601" content="{{ site.time | date_to_xmlschema }}" /> 
 
-  <link rel="contents" title="Archives" href="http://www.bounga.org/archive" /> 
-  <link rel="section" href="http://www.bounga.org/category/General" title="Général" />
+  <link rel="contents" title="Archives" href="/archive" />
+  {% for category in site.categories %}
+  <link rel="section" href="/categories/{{ category.first }}" title="{{ category.first | capitalize }}" />
+  {% endfor %}
+  
 
   <title>{{ page.title }} - {{ site.name }}</title>
 
@@ -25,7 +28,7 @@
 <body>
   <div id="page"> 
     <header> 
-      <h1><a href="{{ site.url }}">{{ site.name }}</a></h1> 
+      <h1><a href="/">{{ site.name }}</a></h1> 
     </header> 
 
     <div id="wrapper"> 
@@ -66,9 +69,9 @@
           <h2>Categories</h2>
           <ul>
             {% for category in site.categories %}
-            <li><a href="{{ site.url}}/categories/{{ category.first }}">{{ category.first | capitalize }}</a> ({{ category.last.size }})</li>
+            <li><a href="/categories/{{ category.first }}">{{ category.first | capitalize }}</a> ({{ category.last.size }})</li>
             {% endfor %}
-            <li><a href="{{ site.url}}/archive">Archives</a></li>
+            <li><a href="/archive">Archives</a></li>
           </ul>
           
           <nav class="tags">
@@ -91,7 +94,7 @@
           <nav class="syndicate">
             <h2>Atom Feed</h2>
             <ul>
-              <li><a type="application/atom+xml" href="{{ site.url }}/articles.atom" title="Atom feed for blog posts" class="feed">Blog posts</a></li>
+              <li><a type="application/atom+xml" href="/posts.xml" title="Atom feed for Bounga's blog posts" class="feed">Blog posts</a></li>
           </nav>
       </aside>
     </div>
