--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <meta name="copyright" content="Nicolas Cavigneaux" />
   <meta name="description" content="Nicolas Cavigneaux's Blog : Free Softwares, Unix, Mac OS X, Ruby, Rails, Mootools and Objective C" />
 
-  <meta name="date" scheme="ISO8601" content="{{ site.time | date_to_xmlschema }}" /> 
+  <meta name="date" content="{{ site.time | date_to_xmlschema }}" /> 
 
   <link rel="contents" title="Archives" href="/archive" />
   {% for category in site.categories %}
@@ -106,7 +106,7 @@
       </p>
       <p>
         <a href="/posts.xml">ATOM</a> &brvbar;
-        <a href="htt://validator.w3.org/check/referer">HTML5</a> &brvbar;
+        <a href="http://validator.w3.org/check/referer">HTML5</a> &brvbar;
         <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> &brvbar;
         <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/">CC</a>
       </p>
