Updated MooTools version

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="/stylesheets/code.css" type="text/css" />
   <link rel="stylesheet" href="/stylesheets/socializer.css" type="text/css" media="all" />
   
-  <script src="http://ajax.googleapis.com/ajax/libs/mootools/1.2.4/mootools-yui-compressed.js" type="text/javascript" charset="utf-8"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/mootools/1.3.0/mootools-yui-compressed.js" type="text/javascript" charset="utf-8"></script>
   <script src="/javascripts/mooSocialize.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
