Added missing closing ul tag for atom feed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,8 +43,8 @@
               <fieldset>
                 <p>
                   <input type="search" id="q" name="q" placeholder="Type your keywords" />
-                  <input type="hidden" name="cx" value="014500678063080222450:6akmbxovczi">
-                  <input type="hidden" name="ie" value="UTF-8">
+                  <input type="hidden" name="cx" value="014500678063080222450:6akmbxovczi" />
+                  <input type="hidden" name="ie" value="UTF-8" />
                   <input class="submit" name="sa" type="submit" value="ok" />
                 </p>
               </fieldset>
@@ -95,6 +95,7 @@
             <h2>Atom Feed</h2>
             <ul>
               <li><a type="application/atom+xml" href="/posts.xml" title="Atom feed for Bounga's blog posts" class="feed">Blog posts</a></li>
+            </ul>
           </nav>
       </aside>
     </div>
