Removed useless ending a tag

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,6 +25,6 @@ layout: default
        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
       })();
     </script>
-    <noscript>Please enable JavaScript to view the comments.</a></noscript>
+    <noscript>Please enable JavaScript to view the comments.</noscript>
   </section>
 </article>
