Styled Disqus comments

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,7 @@ layout: default
 
   <div class="post-content">{{ content }}</div> 
 
+  <h3 class="comments">Comments</h3>
   <section id="comments">
     <p><a href="{{ page.url }}#disqus_thread">View Comments</a></p>
     <div id="disqus_thread"></div>
