--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -302,3 +302,10 @@ a.feed {
  
 /* Disqus comments and trackbacks
 -------------------------------------------------------- */
+h3.comments {
+	background: transparent url(/images/comment.png) no-repeat 0 50%;
+	padding-left: 20px;
+}
+#dsq-content .dsq-item-trackback {
+	background: transparent url(/images/trackback.png) no-repeat 230px 50%;
+}
