--- a/stylesheets/code.css
+++ b/stylesheets/code.css
@@ -58,3 +58,24 @@
 .highlight .vg { color: #008080 } /* Name.Variable.Global */
 .highlight .vi { color: #008080 } /* Name.Variable.Instance */
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
+pre	{
+	border: solid 1px #cccccc;
+ 	border-right: dashed 2px #cccccc;
+	margin: 1em 0;
+	padding: 0.7em;
+	display: block;
+	z-index: 9999;
+	overflow: hidden;
+	color: white;
+	background-color: #0d1a26;
+	width: 500px;
+	transition: width 1s ease-out;
+	-moz-transition: width 1s ease-out;
+	-webkit-transition: width 1s ease-out;
+	-o-transition: width 1s ease-out;
+}
+pre:hover {
+	overflow: visible;
+  border-right: solid 1px #cccccc;
+  width: 730px;
+}
