--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -230,11 +230,11 @@ a.feed {
 .post-content {
 	line-height:1.5em;
 }
-.post-content acronym, .post-excerpt acronym {
+.post-content acronym {
 	cursor: help;
 	border-bottom: 1px dotted #666;
 }
-.post-content pre, .post-excerpt pre {
+.post-content pre {
 	padding: 10px ;
 	font: 1.1em 'courier new', courier, monospace;
 }
