Updated fonts styling using custom fonts and CSS3 effects

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="/stylesheets/style.css" type="text/css" media="all" />
   <link rel="stylesheet" href="/stylesheets/code.css" type="text/css" media="all" />
   <link rel="stylesheet" href="/stylesheets/socializer.css" type="text/css" media="all" />
+  <link href='http://fonts.googleapis.com/css?family=Droid+Sans|Chewy' rel='stylesheet' type='text/css' />
   
   <script src="https://ajax.googleapis.com/ajax/libs/mootools/1.3.0/mootools-yui-compressed.js" type="text/javascript" charset="utf-8"></script>
   <script src="/javascripts/mooSocialize.js" type="text/javascript" charset="utf-8"></script>
