--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -12,9 +12,9 @@ body {
 	padding: 0;
 	background: #0D1A26 url(/images/body-bg.png) repeat-x top;
 	color: #050A0F;
-	font: 62.5% "Trebuchet MS", Helvetica, sans-serif;
+	font: 62.5% "Droid Sans", "Trebuchet MS", Helvetica, sans-serif;
 }
-h2, h3, h4 {
+h1,h2, h3, h4 {
 	margin: 1em 0 0 0;
 	padding: 0;
 }
@@ -72,8 +72,9 @@ header {
   display:block;
 }
 header h1 {
-  font-size:5.7em;
-  font-family:Impact, Charcoal, sans-serif;
+  font-size:6.2em;
+  font-family:"Chewy", Impact, Charcoal, sans-serif;
+	text-shadow: 4px 4px 4px #aaa;
   left:0px;
   width:auto;
 }
@@ -122,13 +123,13 @@ aside {
 }
 aside h2 {
 	margin: 0;
-	font-family:"Trebuchet MS", Helvetica, sans-serif;
+	font-family:"Chewy", Helvetica, sans-serif;
 	font-size:1.5em;
 	color:#336699;
 }
 aside h3 {
 	margin: 1em 0 0.5em;
-	font-family:"Lucida Grande", "Lucida Sans Unicode", sans-serif;
+	font-family:"Chewy", Helvetica, sans-serif;
 	font-size:1.2em;
 	color:#737300;
 }
@@ -244,7 +245,6 @@ a.feed {
 }
 .post-title {
 	color:#A2210D;
-	font-family:"Trebuchet MS", Helvetica, sans-serif;
 	font-size:2.0em;
 }
 .post-title a, .post-title a:visited {
@@ -262,8 +262,26 @@ a.feed {
 	border-bottom: 1px dotted #666;
 }
 .post-content pre {
-	padding: 10px ;
-	font: 1.1em 'courier new', courier, monospace;
+	font: 1.1em 'Droid Sans', 'courier new', courier, monospace;
+	border: solid 1px #cccccc;
+ 	border-right: dashed 2px #cccccc;
+	margin: 1em 0;
+	padding: 0.7em;
+	display: block;
+	z-index: 9999;
+	overflow: hidden;
+	color: white;
+	background-color: #0d1a26;
+	width: 500px;
+	transition: width 1s ease-out;
+	-moz-transition: width 1s ease-out;
+	-webkit-transition: width 1s ease-out;
+	-o-transition: width 1s ease-out;
+}
+.post-content pre:hover {
+	overflow: visible;
+  border-right: solid 1px #cccccc;
+  width: 730px;
 }
 .post-content ul, .post-content ol {
 	margin: 0 0 0.5em 0;
