Fix link to archives ? typo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@
               {% for category in site.categories %}
               <li><a href="/categories/{{ category.first }}">{{ category.first | capitalize }}</a> ({{ category.last.size }})</li>
               {% endfor %}
-              <li><a href="/archive">Archives</a></li>
+              <li><a href="/archives">Archives</a></li>
             </ul>
           </nav>
           
