--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -107,7 +107,7 @@
       </section> 
     </div>
     <footer>
-      <p>© <a href="http://www.cavigneaux.net/">Nicolas Cavigneaux</a> 2010.</p>
+      <p>© <a href="http://www.cavigneaux.net/">Nicolas Cavigneaux</a> 2010 - {{ site.time | date: "%Y" }}.</p>
       <p>
         Source of this site on <a href="http://www.bitbucket.org/Bounga/blog">BitBucket</a>.
         Contact me at <a href="mailto:nico@bounga.org">nico@bounga.org</a>. 
