--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -98,6 +98,9 @@ header h1 a, header h1 a:visited, header h1 a:hover {
 	float: left;
 	padding: 0 25px;
 }
+#main #pagination {
+  clear:both;
+}
 footer {
 	clear: both;
 	padding: 30px 0 0 0;
