--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <meta name="copyright" content="Nicolas Cavigneaux" />
   <meta name="description" content="Nicolas Cavigneaux's Blog : Free Softwares, Unix, Mac OS X, Ruby, Rails, Mootools and Objective C" />
   <meta name="keywords" content="Free Softwares, Unix, Mac OS X, Ruby, Rails, Mootools, Objective C" />
-  <meta name="date" content="{{ site.time | date_to_xmlschema }}" /> 
+  <meta name="date" content="{{ site.time | date_to_xmlschema }}" />
   <base href="/" />
 
   <link rel="contents" title="Archives" href="/archive" />
@@ -17,24 +17,23 @@
   <title>{{ page.title }} - {{ site.name }}</title>
 
   <link href="/posts.xml" rel="alternate" title="Bounga's ATOM Feed" type="application/atom+xml" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" /> 
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
   <link rel="stylesheet" href="/stylesheets/style.css" type="text/css" media="all" />
   <link rel="stylesheet" href="/stylesheets/code.css" type="text/css" media="all" />
-  <link rel="stylesheet" href="/stylesheets/socializer.css" type="text/css" media="all" />
+  <link rel="stylesheet" href="/stylesheets/zocial.css" type="text/css" media="all" />
   <link href='http://fonts.googleapis.com/css?family=Droid+Sans|Chewy' rel='stylesheet' type='text/css' />
-  
+
   <script src="https://ajax.googleapis.com/ajax/libs/mootools/1.3.0/mootools-yui-compressed.js" type="text/javascript" charset="utf-8"></script>
   <script src="/javascripts/mootools-more.js" type="text/javascript" charset="utf-8"></script>
-  <script src="/javascripts/mooSocialize.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
-  <div id="page"> 
-    <header> 
-      <h1><a href="/">{{ site.name }}</a></h1> 
-    </header> 
+  <div id="page">
+    <header>
+      <h1><a href="/">{{ site.name }}</a></h1>
+    </header>
 
-    <div id="wrapper"> 
-      <aside> 
+    <div id="wrapper">
+      <aside>
           <nav id="search">
             <h2><label for="q">Search</label></h2>
             <form action="http://www.google.com/cse">
@@ -49,25 +48,16 @@
             </form>
             <script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=cse-search-box&amp;lang=en"></script>
           </nav>
-          
+
           <nav>
             <h2>Share</h2>
-            <p><img src="/images/mooSocialize/my_socializer.gif" class="socializer" /></p>
-          </nav>
-          
-          {% if site.related_posts != empty %}
-          <nav>
-            <h2>Related posts</h2>
-            <ul>
-              {% for post in site.related_posts limit:5 %}
-                {% if post.url != page.url %}
-                <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-                {% endif %}
-              {% endfor %}
+            <ul id="socials">
+              <li><a href="https://twitter.com/share" class="twitter-share-button" data-via="Bounga" data-size="large" data-hashtags="ruby">Tweet</a></li>
+              <li><a class="g-plusone"></a></li>
+              <li><div class="fb-like" data-send="false" data-layout="button_count" data-width="60" data-show-faces="false"></div></li>
             </ul>
           </nav>
-          {% endif %}
-          
+
           <nav>
             <h2>Categories</h2>
             <ul>
@@ -77,24 +67,24 @@
               <li><a href="/archives">Archives</a></li>
             </ul>
           </nav>
-          
+
           <nav class="tags">
             <h2>Tags</h2>
             <ul>
               {% include tags.html %}
             </ul>
           </nav>
-          
+
           <nav>
             <h2>Links</h2>
             <ul>
               <li><a href="http://www.cavigneaux.net" title="My resume">Resume</a></li>
-              <li><a href="http://www.bitbucket.org/Bounga/" title="Plugins, libs, softs, docs, …">Bounga @ BitBucket</a></li> 
-              <li><a href="http://www.twitter.com/Bounga" title="My tweets">Bounga @ Twitter</a></li> 
-              <li><a href="http://www.workingwithrails.com/person/6667-nicolas-cavigneaux" title="My profile on Working with Rails">Bounga @ WWR</a></li> 
-            </ul> 
+              <li><a href="http://www.bitbucket.org/Bounga/" title="Plugins, libs, softs, docs, …">Bounga @ BitBucket</a></li>
+              <li><a href="http://www.twitter.com/Bounga" title="My tweets">Bounga @ Twitter</a></li>
+              <li><a href="http://www.workingwithrails.com/person/6667-nicolas-cavigneaux" title="My profile on Working with Rails">Bounga @ WWR</a></li>
+            </ul>
           </nav>
-          
+
           <nav class="syndicate">
             <h2>Atom Feed</h2>
             <ul>
@@ -102,16 +92,16 @@
             </ul>
           </nav>
       </aside>
-      
+
       <section id="main">
         {{ content }}
-      </section> 
+      </section>
     </div>
     <footer>
       <p>© <a href="http://www.cavigneaux.net/">Nicolas Cavigneaux</a> 2010 - {{ site.time | date: "%Y" }}.</p>
       <p>
         Source of this site on <a href="http://www.bitbucket.org/Bounga/blog">BitBucket</a>.
-        Contact me at <a href="mailto:nico@bounga.org">nico@bounga.org</a>. 
+        Contact me at <a href="mailto:nico@bounga.org">nico@bounga.org</a>.
       </p>
       <p>
         <a href="/posts.xml">ATOM</a> &brvbar;
@@ -122,8 +112,10 @@
     </footer>
   </div>
 
+  <div id="fb-root"></div>
+
   <script type="text/javascript">
-  if (window.location.host != "localhost") {
+  if (window.location.host != "blog.dev") {
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-915737-1']);
     _gaq.push(['_trackPageview']);
@@ -134,7 +126,7 @@
       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
   }
-  
+
   //<![CDATA[
   (function() {
     var links = document.getElementsByTagName('a');
@@ -147,10 +139,29 @@
     document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/bounga/get_num_replies.js' + query + '"></' + 'script>');
   })();
   //]]>
-  
+
   window.addEvent('domready', function() {
     new Fx.SmoothScroll({duration: 700},window);
   });
-  </script> 
+
+  // Twitter
+  !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+
+  // Google+
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/plusone.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+
+  // Facebook
+  (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=307911779305924";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+  </script>
 </body>
 </html>
