Modify some meta-tags to be W3C compliant

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="author" content="Nicolas Cavigneaux" />
-  <meta name="copyright" content="Nicolas Cavigneaux" />
+  <meta name="dcterms.rightsHolder" content="Nicolas Cavigneaux" />
   <meta name="description" content="Nicolas Cavigneaux's Blog : Free Softwares, Unix, Mac OS X, Ruby, Rails, Mootools and Objective C" />
-  <meta name="keywords" content="Free Softwares, Unix, Mac OS X, Ruby, Rails, Mootools, Objective C" />
-  <meta name="date" content="{{ site.time | date_to_xmlschema }}" />
-  <base href="/" />
+  <meta name="keywords" content="Free Softwares, Unix, Mac OS X, Ruby, Rails, Mootools, Objective C, Ruby Motion, Mac Ruby" />
+  <meta name="dcterms.modified" content="{{ site.time | date: "%Y-%m-%d" }}" />
+  <meta name="dcterms.license" content="http://creativecommons.org/licenses/by-nc-sa/3.0/us/" />
+  <base href="http://www.bounga.org/" />
 
   <link rel="contents" title="Archives" href="/archive" />
   {% for category in site.categories %}
