--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -153,26 +153,11 @@ aside li {
   -webkit-transition-duration: 0.25s;
   -o-transition-duration: 0.25s;
   transition-duration: 0.25s;
-  -webkit-transform: scale(1) rotate(0);
-  -moz-transform: scale(1) rotate(0);
-  -o-transform: scale(1) rotate(0);
-  transform: scale(1) rotate(0);
 }
 .read-it a:hover, .post-tags li a:hover, aside li a:hover {
-	padding: 0.5em;
 	background: #33669d;
 	color: #fff;
 	text-decoration: none;
-  -webkit-transform: scale(1.05) rotate(-1deg);
-  -moz-transform: scale(1.05) rotate(-1deg);
-  -o-transform: scale(1.05) rotate(-1deg);
-  transform: scale(1.05) rotate(-1deg);
-}
-.post-tags li:nth-child(odd) a:hover, aside li:nth-child(odd) a:hover {
-  -webkit-transform: scale(1.05) rotate(1deg);
-  -moz-transform: scale(1.05) rotate(1deg);
-  -o-transform: scale(1.05) rotate(1deg);
-  transform: scale(1.05) rotate(1deg);
 }
 aside .syndicate ul {
 	border-top: none;
@@ -229,6 +214,7 @@ aside .tags ul li {
 	background: #336699;
 	color: #fff;
 	border: 1px solid #336699;
+	border-radius: 10px;
 }
 a.feed {
 	background: transparent url(/images/feed.png) no-repeat 0 0.25em;
