Update mootools to latest version

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="/stylesheets/style.css" type="text/css" media="all" />
   <link rel="stylesheet" href="/stylesheets/code.css" type="text/css" media="all" />
 
-  <script src="https://ajax.googleapis.com/ajax/libs/mootools/1.3.0/mootools-yui-compressed.js" type="text/javascript" charset="utf-8"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/mootools/1.6.0/mootools.min.js"></script>
   <script src="/javascripts/mootools-more.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
