--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -227,6 +227,7 @@ a.feed {
 .post-title {
 	color:#A2210D;
 	font-size:2.0em;
+	margin-bottom: 0.3em;
 }
 .post-title a, .post-title a:visited {
 	color:#A2210D;
