Don't specify protocol so it's infered from current one

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="Free Softwares, Unix, Mac OS X, Ruby, Rails, Mootools, Objective C, RubyMotion, MacRuby" />
   <meta name="dcterms.modified" content="{{ site.time | date: "%Y-%m-%d" }}" />
   <meta name="dcterms.license" content="http://creativecommons.org/licenses/by-nc-sa/3.0/us/" />
-  <base href="http://www.bounga.org/" />
+  <base href="//www.bounga.org/" />
 
   <link rel="contents" title="Archives" href="/archive" />
   {% for category in site.categories %}
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="/stylesheets/style.css" type="text/css" media="all" />
   <link rel="stylesheet" href="/stylesheets/code.css" type="text/css" media="all" />
 
-  <script src="https://ajax.googleapis.com/ajax/libs/mootools/1.6.0/mootools.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/mootools/1.6.0/mootools.min.js"></script>
   <script src="/javascripts/mootools-more.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
@@ -35,7 +35,7 @@
       <aside>
           <nav id="search">
             <h2><label for="q">Search</label></h2>
-            <form action="http://www.google.com/cse">
+            <form action="//www.google.com/cse">
               <fieldset>
                 <p>
                   <input type="search" id="q" name="q" placeholder="Type your keywords" />
@@ -45,7 +45,7 @@
                 </p>
               </fieldset>
             </form>
-            <script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=cse-search-box&amp;lang=en"></script>
+            <script type="text/javascript" src="//www.google.com/coop/cse/brand?form=cse-search-box&amp;lang=en"></script>
           </nav>
 
           <nav>
@@ -164,7 +164,7 @@
         query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&';
       }
     }
-    document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/bounga/get_num_replies.js' + query + '"></' + 'script>');
+    document.write('<script charset="utf-8" type="text/javascript" src="//disqus.com/forums/bounga/get_num_replies.js' + query + '"></' + 'script>');
   })();
   //]]>
 
