Use HTTPS for external links whenever it's possible

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Nicolas Cavigneaux's Blog : Free Softwares, Unix, Mac OS X, Ruby, Rails, Mootools and Objective C" />
   <meta name="keywords" content="Free Softwares, Unix, Mac OS X, Ruby, Rails, Mootools, Objective C, RubyMotion, MacRuby" />
   <meta name="dcterms.modified" content="{{ site.time | date: "%Y-%m-%d" }}" />
-  <meta name="dcterms.license" content="http://creativecommons.org/licenses/by-nc-sa/3.0/us/" />
+  <meta name="dcterms.license" content="https://creativecommons.org/licenses/by-nc-sa/3.0/us/" />
   <base href="//www.bounga.org/" />
 
   <link rel="contents" title="Archives" href="/archive" />
@@ -109,8 +109,8 @@
             <h2>Links</h2>
             <ul>
               <li><a href="http://www.cavigneaux.net" title="My resume">Resume</a></li>
-              <li><a href="http://www.bitbucket.org/Bounga/" title="Plugins, libs, softs, docs, …">Bounga @ BitBucket</a></li>
-              <li><a href="http://www.twitter.com/Bounga" title="My tweets">Bounga @ Twitter</a></li>
+              <li><a href="https://www.bitbucket.org/Bounga/" title="Plugins, libs, softs, docs, …">Bounga @ BitBucket</a></li>
+              <li><a href="https://www.twitter.com/Bounga" title="My tweets">Bounga @ Twitter</a></li>
               <li><a href="http://www.workingwithrails.com/person/6667-nicolas-cavigneaux" title="My profile on Working with Rails">Bounga @ WWR</a></li>
             </ul>
           </nav>
@@ -130,14 +130,14 @@
     <footer>
       <p>© <a href="http://www.cavigneaux.net/">Nicolas Cavigneaux</a> 2010 - {{ site.time | date: "%Y" }}.</p>
       <p>
-        Source of this site on <a href="http://www.bitbucket.org/Bounga/blog">BitBucket</a>.
+        Source of this site on <a href="https://www.bitbucket.org/Bounga/blog">BitBucket</a>.
         Contact me at <a href="mailto:nico@bounga.org">nico@bounga.org</a>.
       </p>
       <p>
         <a href="/posts.xml">ATOM</a> &brvbar;
-        <a href="http://validator.w3.org/check/referer">HTML5</a> &brvbar;
-        <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> &brvbar;
-        <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/">CC</a>
+        <a href="https://validator.w3.org/check/referer">HTML5</a> &brvbar;
+        <a href="https://jigsaw.w3.org/css-validator/check/referer">CSS</a> &brvbar;
+        <a href="https://creativecommons.org/licenses/by-nc-sa/3.0/us/">CC</a>
       </p>
     </footer>
   </div>
